modules/gdscript/tests/scripts/parser/errors/missing_colon_setget_inline.gd
#GDTEST_PARSER_ERROR

var property get = get_property

func test():
	pass
	
func get_property():
	return 0
